[package]
name = "crosstraffic_middleware"
version = "0.1.0"
authors = ["Rei Tamaru <tamaru@wisc.edu>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Middleware for transporations library and the software applications."
repository = "https://github.com/crosstraffic/cross-traffic-middleware"
readme = "README.md"
exclude = [
    ".gitignore",
]

[dependencies]
wasm-bindgen = "0.2.90"
serde = { version = "1.0", features = ["derive"]}
serde-wasm-bindgen = "0.4"
transportations_library = { path = "../transportations-library" }
js-sys = "0.3.67"

[lib]
name = "crosstraffic_middleware"
crate-type = ["cdylib", "rlib"]